--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,49 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/aopalliance-repackaged-2.4.0-b09.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/asm-debug-all-5.0.4.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/formbeanfactory-2.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/genericdao-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-core-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-entitymanager-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-envers-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-java8-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-jpamodelgen-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hibernate-osgi-5.0.6.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hk2-api-2.4.0-b09.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hk2-locator-2.4.0-b09.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/hk2-utils-2.4.0-b09.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/javax.inject-2.4.0-b09.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-client-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-common-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-container-servlet-2.22.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-container-servlet-core-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-entity-filtering-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-guava-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-media-jaxb-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-media-moxy-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jersey-server-2.16.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/jstl-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/mysql-connector-java-5.1.14-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/mysql-connector-java-5.1.34-bin.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/org.eclipse.persistence.antlr-2.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/org.eclipse.persistence.asm-2.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/org.eclipse.persistence.core-2.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/org.eclipse.persistence.moxy-2.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/org.osgi.compendium-4.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/standard-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/Byte/Documents/Spring2016Projects/CarnegieFinancialSystemWebService/WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
